[package]
name = "paillier_zk"
version = "0.1.0"
edition = "2021"

[dependencies]
paillier-zk = "0.4.2"
fast-paillier = { version = "0.1.0", features = ["serde"] }
rug = "1.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" 
rand_core = { version = "0.6.3", features = ["getrandom"] }